// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`marquee > renders with as correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="group flex gap-$gap [--duration:20s] [--gap:--spacing(16)] items-center relative overflow-hidden after:(pointer-events-none content-empty absolute z-2 from-background to-transparent) before:(pointer-events-none content-empty absolute z-2 from-background to-transparent) flex-row backface-hidden after:(h-full w-1/3 content-empty end-0 inset-y-0 bg-gradient-to-l) before:(h-full w-1/3 content-empty start-0 inset-y-0 bg-gradient-to-r) rtl:after:bg-gradient-to-r rtl:before:bg-gradient-to-l">
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
</section>"
`;

exports[`marquee > renders with class correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="group flex gap-$gap [--duration:20s] [--gap:--spacing(16)] items-center relative overflow-hidden after:(pointer-events-none content-empty absolute z-2 from-background to-transparent) before:(pointer-events-none content-empty absolute z-2 from-background to-transparent) flex-row backface-hidden after:(h-full w-1/3 content-empty end-0 inset-y-0 bg-gradient-to-l) before:(h-full w-1/3 content-empty start-0 inset-y-0 bg-gradient-to-r) rtl:after:bg-gradient-to-r rtl:before:bg-gradient-to-l text-xl">
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
</div>"
`;

exports[`marquee > renders with default slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="group flex gap-$gap [--duration:20s] [--gap:--spacing(16)] items-center relative overflow-hidden after:(pointer-events-none content-empty absolute z-2 from-background to-transparent) before:(pointer-events-none content-empty absolute z-2 from-background to-transparent) flex-row backface-hidden after:(h-full w-1/3 content-empty end-0 inset-y-0 bg-gradient-to-l) before:(h-full w-1/3 content-empty start-0 inset-y-0 bg-gradient-to-r) rtl:after:bg-gradient-to-r rtl:before:bg-gradient-to-l">
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden">Default slot</div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden">Default slot</div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden">Default slot</div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden">Default slot</div>
</div>"
`;

exports[`marquee > renders with orientation correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="group flex gap-$gap [--duration:20s] [--gap:--spacing(16)] items-center relative overflow-hidden after:(pointer-events-none content-empty absolute z-2 from-background to-transparent) before:(pointer-events-none content-empty absolute z-2 from-background to-transparent) flex-col backface-hidden after:(h-1/3 w-full content-empty inset-x-0 bottom-0 bg-gradient-to-t) before:(h-1/3 w-full content-empty inset-x-0 top-0 bg-gradient-to-b)">
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around h-full flex-col motion-safe:animate-marquee-vertical pohon:h-fit backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around h-full flex-col motion-safe:animate-marquee-vertical pohon:h-fit backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around h-full flex-col motion-safe:animate-marquee-vertical pohon:h-fit backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around h-full flex-col motion-safe:animate-marquee-vertical pohon:h-fit backface-hidden"></div>
</div>"
`;

exports[`marquee > renders with overlay off correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="group flex gap-$gap [--duration:20s] [--gap:--spacing(16)] items-center relative overflow-hidden flex-row">
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
</div>"
`;

exports[`marquee > renders with pauseOnHover correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="group flex gap-$gap [--duration:20s] [--gap:--spacing(16)] items-center relative overflow-hidden after:(pointer-events-none content-empty absolute z-2 from-background to-transparent) before:(pointer-events-none content-empty absolute z-2 from-background to-transparent) flex-row backface-hidden after:(h-full w-1/3 content-empty end-0 inset-y-0 bg-gradient-to-l) before:(h-full w-1/3 content-empty start-0 inset-y-0 bg-gradient-to-r) rtl:after:bg-gradient-to-r rtl:before:bg-gradient-to-l">
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full group-hover:[animation-play-state:paused] flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full group-hover:[animation-play-state:paused] flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full group-hover:[animation-play-state:paused] flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full group-hover:[animation-play-state:paused] flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
</div>"
`;

exports[`marquee > renders with repeat correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="group flex gap-$gap [--duration:20s] [--gap:--spacing(16)] items-center relative overflow-hidden after:(pointer-events-none content-empty absolute z-2 from-background to-transparent) before:(pointer-events-none content-empty absolute z-2 from-background to-transparent) flex-row backface-hidden after:(h-full w-1/3 content-empty end-0 inset-y-0 bg-gradient-to-l) before:(h-full w-1/3 content-empty start-0 inset-y-0 bg-gradient-to-r) rtl:after:bg-gradient-to-r rtl:before:bg-gradient-to-l">
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
</div>"
`;

exports[`marquee > renders with reverse correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="group flex gap-$gap [--duration:20s] [--gap:--spacing(16)] items-center relative overflow-hidden after:(pointer-events-none content-empty absolute z-2 from-background to-transparent) before:(pointer-events-none content-empty absolute z-2 from-background to-transparent) flex-row backface-hidden after:(h-full w-1/3 content-empty end-0 inset-y-0 bg-gradient-to-l) before:(h-full w-1/3 content-empty start-0 inset-y-0 bg-gradient-to-r) rtl:after:bg-gradient-to-r rtl:before:bg-gradient-to-l">
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full ![animation-direction:reverse] flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full ![animation-direction:reverse] flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full ![animation-direction:reverse] flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full ![animation-direction:reverse] flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden"></div>
</div>"
`;

exports[`marquee > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="group flex gap-$gap [--duration:20s] [--gap:--spacing(16)] items-center relative overflow-hidden after:(pointer-events-none content-empty absolute z-2 from-background to-transparent) before:(pointer-events-none content-empty absolute z-2 from-background to-transparent) flex-row backface-hidden after:(h-full w-1/3 content-empty end-0 inset-y-0 bg-gradient-to-l) before:(h-full w-1/3 content-empty start-0 inset-y-0 bg-gradient-to-r) rtl:after:bg-gradient-to-r rtl:before:bg-gradient-to-l">
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden gap-4"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden gap-4"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden gap-4"></div>
  <div data-slot="content" class="flex shrink-0 gap-$gap min-w-max items-center justify-around w-full flex-row motion-safe:animate-marquee motion-safe:rtl:animate-marquee backface-hidden gap-4"></div>
</div>"
`;
